--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>8.0.8-dmr</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
     <build>
         <finalName>design-mode</finalName>
